# teste_b

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  REFATORACAO.md  environment.yml  pyproject.toml
configs/: bmatrix-x1.10242.yaml  jaci-x1.10242.yaml  jaci.yaml
docs/: README.md  architecture.md  bmatrix-theory.md  configuration.md  developer-guide.md  diagnostics-and-plots.md  end-to-end-tutorial.md  jaci-quickstart.md  mpaswf-pairs.md  operations.md  refactoring.md  scientific-contract.md  stage-products.md  testing.md  user-guide.md  workflow.md
scripts/: load_jaci_env.sh
src/bmatrix/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  dirac_summary.py  errors.py  hdiag_summary.py  nicas_summary.py  pipeline.py  products.py  scheduler.py  scientific_config.py  shell.py  vbal_groups.py  verify.py
src/bmatrix/bflow_core/: __init__.py  diff.py  external.py  manifest.py  model.py  netcdf_utils.py  psichi.py  runner.py  template.py  validate.py  variables.py  weights.py  workspace.py
src/bmatrix/dirac_core/: __init__.py  checks.py  config_files.py  jobs.py  model.py  prepare.py  runner.py
src/bmatrix/esmf_weights/: __init__.py  config.py  constants.py  errors.py  esmf_support.py  generator.py  mpas.py  output.py  utils.py
templates/pbs/: run_mpas_48h_test.pbs  run_mpas_init_from_gfs.pbs  run_mpas_smoke_test.pbs
tests/: test_bflow_cdf5_products.py  test_config_and_plan.py  test_hdiag_sampling.py  test_nmc_manifest.py  test_pipeline_tools.py  test_plots_core.py  test_scientific_rendering.py  test_unbalance_stage.py  test_vbal_saber_driver_keys.py
(+58 files in other folders)
